<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.appinsnap.election.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:background="@color/white"
        android:layout_height="fill_parent" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.appinsnap.election.MainActivity">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layout_topToolbar"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp"
        android:id="@+id/topToolbar"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textSize="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:id="@+id/txt_reportFirst"
            android:layout_marginLeft="20dp"
            android:textColor="@color/color_report_new"
            android:layout_gravity="center_horizontal"
            android:textSize="28dp" />


    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/spinner_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/menu_icon2"
        android:layout_marginRight="5dp"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        ></ImageView>

</RelativeLayout>

    <ImageView
        android:id="@+id/imgview_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/layout_topToolbar"
        android:gravity="center"
        android:src="@drawable/ib_logo_new"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/ct_relativelayout"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_page_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/imgview_ib">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:id="@+id/txt_ct"
            android:text="@string/txt_ct"
            android:textColor="@color/color_category"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/ci_relativelayout"
        android:background="@drawable/home_page_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/ct_relativelayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:id="@+id/txt_ci"
            android:text="@string/txt_ci"
            android:textColor="@color/color_category"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/political_relativelayout"
        android:background="@drawable/home_page_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/ci_relativelayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:id="@+id/txt_political"
            android:text="@string/txt_political"
            android:textColor="@color/color_category"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/religious_relativelayout"
        android:background="@drawable/home_page_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/political_relativelayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:id="@+id/txt_religious"
            android:text="@string/txt_religious"
            android:textColor="@color/color_category"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/security_foreign_relativelayout"
                android:background="@drawable/home_page_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/religious_relativelayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:id="@+id/txt_security"
                    android:text="@string/txt_security_fn"
                    android:textColor="@color/color_category"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/crime_relativelayout"
                android:background="@drawable/home_page_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/security_foreign_relativelayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/txt_crime"
                    android:id="@+id/txt_crime"
                    android:textColor="@color/color_category"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/threats_relativelayout"
                android:background="@drawable/home_page_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/crime_relativelayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/txt_threat_alert"
                    android:id="@+id/txt_threat_alert"
                    android:textColor="@color/color_category"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/misc_relativelayout"
                android:background="@drawable/home_page_field"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/threats_relativelayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/txt_misc_alert"
                    android:id="@+id/txt_misc"
                    android:textColor="@color/color_category"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next_relativelayout"
                android:layout_marginTop="10dp"
                android:visibility="gone"

                android:layout_marginBottom="10dp"
                android:layout_below="@+id/misc_relativelayout">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_next_step_5"
                    android:text="@string/btn_text_logout"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:visibility="gone"

                android:layout_marginLeft="20dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/js_logo" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"

                    android:src="@drawable/app_in_snap_logo" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
