<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.appinsnap.election.LoginActivity">

    <ImageView
        android:id="@+id/imgview_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/topToolbar"
        android:gravity="center"
        android:src="@drawable/icon"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imgview_ib"
        android:id="@+id/txto"
        android:textColor="@color/white"
        android:text="@string/text_login_o"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/txt"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/txto"
        android:textColor="@color/white"
        android:text="@string/text_login_t"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/username_relativelayout"
        android:layout_below="@+id/txt"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/username">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:cursorVisible="true"
            android:maxLines="1"
            android:background="@null"
            android:hint="@string/et_hint_username"
            android:text=""
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/password_relativelayout"
        android:layout_below="@+id/username_relativelayout"
        android:layout_marginTop="10dp"
        android:background="@drawable/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:cursorVisible="true"
            android:maxLines="1"
            android:background="@null"
            android:hint="@string/et_hint_password"
            android:text=""
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_relativelayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/txtview_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:text="@string/txtview_forgotpassword"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/loginbutton_rounded"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="center"-->
        <!--android:visibility="gone"-->

        <!--android:layout_marginLeft="20dp">-->
        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/js_logo" />-->

        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginRight="20dp"-->

            <!--android:src="@drawable/app_in_snap_logo" />-->
    <!--</RelativeLayout>-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/color_white_view"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btm_footer">

        <ImageView
            android:id="@+id/img_footer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/footer_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_footerr"
            android:layout_toRightOf="@+id/img_footer"
            android:text="APP IN SNAP"
            android:textColor="@color/color_white_view"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_footerr2"
            android:layout_below="@+id/txt_footerr"
            android:layout_toRightOf="@+id/img_footer"
            android:text="we value your time"
            android:textColor="@color/color_white_view"
            android:textSize="14.5dp"
            android:textStyle="bold"
            />

    </RelativeLayout>

</RelativeLayout>
